# ppal

./: CMakeLists.txt  README.md  main.cpp
include/: downloader.h  error.h  ppal.h  shmake.h
src/error/: error.cpp
src/install/: shmake.cpp
src/network/: downloader.cpp
